# saidl-2026

./: .gitignore  README.md  main.py  pyproject.toml
core-ml/: attention_heads.py  data_preprocess.py  fetch_data.py  inference.py  positional_embeddings.py  run_all.sh  scratchpad.ipynb  train.ipynb  train.py  transformer_blocks.py  variations.ipynb
core-ml/configs/: config.yaml
core-ml/paper/: backup hehe.tex  main.tex  preamble.sty
core-ml/rough/: scratchpad2.ipynb  variations.ipynb  variations2.ipynb
diffusion/: DiT.py  bench.py  compare.py  fetch_data.py  generate.py  modules.py  sample.py  scratchpad.ipynb  train.py  train2.py
diffusion/paper/: main.tex
