[project]
name = "saidl-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "hydra-core>=1.3.2",
    "numpy>=2.4.3",
    "rich>=14.3.3",
    "tensorboard>=2.18.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.4.0",
    "wandb>=0.18.0",
]
